# space_invaders

./: .gitignore  .swrc  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
server/: Cargo.toml
server/src/: main.rs
src/: App.tsx  index.ts  template.html
src/components/BodyComponent/: BodyComponent.tsx
src/components/DifficultyMenu/: DifficultyMenu.style.ts  DifficultyMenu.tsx
src/components/Footer/: Footer.style.ts  Footer.tsx
src/components/Header/: Header.style.ts  Header.tsx
src/components/IntroMenu/: IntroMenu.style.ts  IntroMenu.tsx
src/components/PauseMenu/: PauseMenu.style.ts  PauseMenu.tsx
src/components/Playboard/: Playboard.style.ts  Playboard.tsx
src/components/ScoresMenu/: ScoresMenu.style.ts  ScoresMenu.tsx
src/components/Spaceship/: Spaceship.style.ts  Spaceship.tsx
src/components/svgs/: Alien.tsx  Heart.tsx  Laser.tsx  Spaceship.tsx
src/contexts/: GameContext.tsx  GameState.tsx  InputHandler.tsx  PlayerState.tsx  WasmContext.tsx
src/hooks/: useBackgroundScroll.ts  useContext.ts  useFocus.ts  useTrapFocus.ts
src/styles/: MenuNav.ts  animations.ts  styles.style.ts
src/types/: ElementCoords.ts  GameState.type.ts  InputHandler.type.ts  Keypresses.type.ts  PlayerState.type.ts  WasmContext.ts  coords.type.ts  helpers.types.ts
src/wasm/: Cargo.toml  LICENSE_MIT
src/wasm/src/: alien.rs  game.rs  laser.rs  lib.rs  spaceship.rs
