[package]
name = "wasm"
version = "0.1.0"
authors = ["Patrick McLennan <patrick.a.mclennan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Attr',
  'console',
  'Document',
  'DomRect',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]